<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListItemsActivity">


    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2"
        app:rowCount="2">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/RadioButton"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/CheckBox"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Switch
            android:id="@+id/Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/Switch"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:contentDescription="@string/ImageButton"
            android:contentDescription="@string/CameraIcon"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_gravity="fill"
            app:layout_rowWeight="1" />
    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>